// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonGroup ButtonGroup 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kkRmBi"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 jMubZv"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup more button types 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 cvCdjb"
      width="600px"
    >
      <div
        class="ButtonGroup-xkz195-0 jMubZv"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa DangerButton-sc-1220u5k-0 hUeuBm"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa QuietButton-sc-1l5k8i4-0 dgPQkb"
        >
          Button
        </button>
        <button
          class="IconicButton__WrapperButton-sc-1u3dojp-1 heRWcu IconicButton-sc-1u3dojp-2 hOBWmS"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 jysEEq"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="menu"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </button>
        <button
          aria-label="Button"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 heRWcu IconicButton-sc-1u3dojp-2 hOBWmS"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 jysEEq"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="menu"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
          <p
            class="Text-sc-1wu7vpu-0 cmRLI"
            color="currentColor"
            font-size="16px"
          >
            Button
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup with alignment right 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kkRmBi"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 kPeNAt"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup with alignment spaced 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kkRmBi"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 fGhOgc"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup wrapping buttons 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 bxEkvo"
    >
      <div
        class="ButtonGroup-xkz195-0 jMubZv"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 eCnczG"
    >
      <div
        class="ButtonGroup-xkz195-0 kPeNAt"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;
